# molduck

./: LICENSE  README.md  pyproject.toml
docs/: Makefile  openapi.json
docs/source/: conf.py  index.rst
docs/source/_templates/: navigation.html  projectname.html  versioning.html
docs/source/intro/: getting-started.rst  index.rst  use-cases.rst
docs/source/usage/: cli.rst  configuration.rst  index.rst  webserver.rst
projects/cli/: README.md  pyproject.toml
projects/cli/src/cli/: client.py  config.py  main.py  utils.py
projects/cli/src/cli/cmd/: __init__.py  connect.py  version.py
projects/cli/src/cli/cmd/jobs/: __init__.py  info.py  ls.py  run.py
projects/webserver/: .gitignore  README.md  db.sqlite3  prova.py  pyproject.toml
projects/webserver/bruno/: bruno.json
projects/webserver/bruno/environments/: molduck.bru
projects/webserver/bruno/jobs/: Create job.bru  List jobs.bru  Retrieve job QC Schema.bru  Retrieve job.bru
projects/webserver/core/: celery.py  settings.py  urls.py
projects/webserver/molduck/: admin.py  api.py  apps.py  models.py  schemas.py  tasks.py
projects/webserver/molduck/migrations/: 0001_initial.py  0002_alter_job_output_data.py  0003_remove_job_created_by.py  0004_job_executed.py  0005_remove_job_executed_remove_job_success_job_status.py
projects/webserver/molduck/runner/: __init__.py  energy.py  energy_runner.py  error.py  runner.py
projects/webserver/molduck/utils/: atom_list.py  error.py
