[project]
name = "molduck"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Giulio De Matteis", email = "hello@giuliodematte.is" }
]
dependencies = [
    "sphinx>=7.3.7",
    "sphinxcontrib-httpdomain>=1.8.1",
    "sphinx-readable-theme>=1.3.0",
    "sphinx-multiversion>=0.2.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
virtual = true

[tool.rye.workspace]
members = ["libs/*", "projects/*"]
