[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Giulio De Matteis", email = "hello@giuliodematte.is" }
]
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "platformdirs>=4.2.2",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
molduck = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
